--- a/index.html
+++ b/index.html
@@ -98,5 +98,79 @@
     </section>
 
     <!--Section 4 End-->
+
+    <!--Section 5 Start-->
+
+    <section class="section5">
+        <div class="extra-run">
+            <div class="text3">
+                <h1>Run an Extra <br>
+                    Mile Easily</h1>
+                    <h3>We believe fitness should be accessible to everyone, <br>
+                        everywhere, regardless of income or access to a gym. With <br>
+                        hundreds of professional workouts.</h3>
+                        <button class="btn3">
+                            Join Now
+                        </button>
+            </div>
+            <div class="pic2">
+                <img src="run.jpg" alt="">
+            </div>
+
+        </div>
+
+    </section>
+    <!--Section 5 End-->
+
+
+    <!--Section 6 Start-->
+
+
+    <section class="section6">
+
+        <div class="text4">
+            <h1>Trainings and Exercises</h1>
+            <h3>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br>
+                access to a gym.
+                </h3>
+        </div>
+
+    </section>
+
+    <!--Section 6 End-->
+
+<!--Section 7 Start-->
+
+     <section class="section7">
+        <div class="pic-section-3">
+            <div>
+                <img src="exercise1.jpg" alt="">
+            </div>
+            <div>
+                <img src="exercise2.png" alt="">
+            </div>
+            <div>
+                <img src="exercise3.png" alt="">
+            </div>
+        </div>
+        <div class="pic-section-4">
+            <div>
+                <img src="exercise4.png" alt="">
+            </div>
+            <div>
+                 <img src="exercise5.jpg" alt="">
+                </div>
+            <div>
+                <img src="exercise6.jpg" alt="">
+            </div>
+        </div>
+        
+       
+
+
+     </section>
+
+
+
 </body>
 </html>
