--- a/index.html
+++ b/index.html
@@ -172,6 +172,57 @@
 
      <!--Section 7 End-->
 
+     <!--Section 8 Start-->
+
+     <section class="section8">
+        <div class="text5">
+            <h1>BMI Calculator</h1>
+            <h3>We believe fitness should be accessible to everyone, everywhere, regardless of income or
+                <br>access to a gym.</h3>
+        </div>
+     </section>
+
+      <!--Section 8 End-->
+
+      <!--Section 9 Start-->
+
+      <section class="section9">
+        <div class="Calculator">
+            <div class="Calculator-1">
+                <div class="BMI">
+                    <h1>BMI Calculator Chart</h1>
+                </div>
+                    <table>
+                        <tr>
+                            <th>BMI</th>
+                            <th>Weight Status</th>
+                        </tr>
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr>
+                            <td>18.5-24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>
+                           <td>25.0-29.9</td>
+                           <td>Overweight</td>
+                        </tr>
+                        <tr>
+                            <td>30.0-and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </table>
+
+                </div>
+
+            </div>
+
+        </div>
+
+      </section>
+
 
 
 </body>
