--- a/index.html
+++ b/index.html
@@ -188,10 +188,8 @@
 
       <section class="section9">
         <div class="Calculator">
-            <div class="Calculator-1">
                 <div class="BMI">
                     <h1>BMI Calculator Chart</h1>
-                </div>
                     <table>
                         <tr>
                             <th>BMI</th>
@@ -214,8 +212,23 @@
                             <td>Obese</td>
                         </tr>
                     </table>
+                </div>
+
+                <div class="Calculate-BMI">
+                    <h1>Calculate your BMI</h1>
+                    <h3>We believe fitness should be accessible to everyone, everywhere, regardless of
+                        <br>income or access to a gym. </h3>
+                        <input class="input-1" type="text" placeholder="Height/cm">
+                         <input class="input-1" type="text" placeholder="Weight/kg"> <br>
+                        <input class="input-1" type="text" placeholder="Age">
+                        <input class="input-1" type="text" placeholder="Sex">
+                        <br>
+                        <input class="input-2" type="text" placeholder="Select an activity factor">
+                        <br>
+                        <button class="btn-4">Calculate</button>
 
                 </div>
+                    
 
             </div>
 
