--- a/index.html
+++ b/index.html
@@ -327,7 +327,43 @@
 
         <!--Section 11 End-->
 
+         <!--Section 12 Start-->
 
+         <section class="section12">
+            <div class="footer">
+                <div class="footer-1">
+                    <h1>Fitness</h1>
+                    <h3>We believe fitness should be accessible to everyone, <br>
+                        everywhere, regardless of income or access to a gym. With <br>
+                        hundreds of professional workouts.
+                        </h3>
+                        <hr>
+                </div>
+
+                <div class="footer-2">
+                    <h1>Get Started</h1>
+                    <h2>Service</h2>
+                    <h2>Contact Us</h2>
+                    <h2>Affiliate Program</h2>
+                    <h2>About Us</h2>
+
+                </div>
+
+                <div class="footer-3">
+                    <h1>Get Started</h1>
+                    <h2>Fitness</h2>
+                    <h2>Platform</h2>
+                    <h2>Workout Libary</h2>
+                    <h2>App Design</h2>
+
+                </div>
+                
+            </div>
+         </section>
+
+         <!--Section 12 End-->
+
+ 
 
 </body>
 </html>
