--- a/index.html
+++ b/index.html
@@ -363,6 +363,12 @@
 
          <!--Section 12 End-->
 
+         <section class="section13">
+            <hr>
+            <h1>All right reserved @solayman 2025</h1>
+
+         </section>
+
  
 
 </body>
