--- a/index.html
+++ b/index.html
@@ -363,11 +363,14 @@
 
          <!--Section 12 End-->
 
+         <!--Section 13 Start-->
          <section class="section13">
             <hr>
             <h1>All right reserved @solayman 2025</h1>
 
          </section>
+
+         <!--Section 13 End-->
 
  
 
